--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         const root = document.getElementById('root');
         root.appendChild(heading);
     </script> -->
-
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="./App.js"> // it has to be placed below the cdn links
+<script type="module" src="./App.js"> // it has to be placed below the cdn links
 </script>
 </body>
 </html>
